Nicholas helped me fix the styles, however as the session continued he began to attack me like a violent little prick. Here is his story: Patrick the volcano continued to labor on his project, little did he know a great evil was about to descened apon him... SCARY RIGHT? Soon a giant monkey with eyes of steel jumped on his back and threw pillows at the great orbs that were patricks eyes. This monkey, was me. I then proceeded to eat his hair and claw his glasses off of his face, he was not pleased. Confused as I was I decided to continue assaulting him in the hopes that perhaps one day he would come around to the fun of pain. Sadly this was not the case....

--- a/Web/chart.css
+++ b/Web/chart.css
@@ -1,17 +1,42 @@
-.chart td {
-	vertical-align: top;
-}
-
-.chart .canvas {
-	/*background: blue;*/
-}
-
-.chart .series-selector {
-	padding-top: 5px;
-	font-size: 14px;
-}
-
 .chart {
 	float: left;
 	overflow: hidden;
+}
+
+.chart .header {
+	position: absolute;
+	top: 0; left: 0; right: 0;
+	width: 100%;
+	height: 50px;
+	overflow: hidden;
+}
+
+.chart .header h3 {
+	float: left;
+	clear: none;
+	margin: 0 5px;
+}
+
+.chart .header input {
+	height: auto;
+	width: 100px;
+}
+
+.chart .container {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 50px;
+	bottom: 0;
+	width: 100%;
+}
+
+.chart .canvas {
+	width: 100%;
+	height: 100%;
+	cursor: none;
+}
+
+.chart .canvas .legend {
+	cursor: default !important;
 }
